# CMakeFirstTry

./: .gitignore  CMakeLists.txt  License.txt  README.md  README.txt  genVS2015.bat  genXCode.sh
JLib/: Makefile
JLib/Lib1/: Lib1.cpp  Lib1.h
JLib/Time/: Time2.c  TimeJ.cpp  TimeJ.h
LoadCLib/: CMakeLists.txt  Makefile
LoadCLib/LoadCLib.Android/: LoadCLib.Android.cpp  LoadCLib.Android.vcxproj  LoadCLib.Android.vcxproj.filters
LoadCLib/LoadCLib.Shared/: LoadCLib.Shared.vcxitems  LoadCLib.cpp  LoadCLib.h  UnmanagedCPPCode.cpp  UnmanagedCPPCode.h
LoadCLib/LoadCLib.iOS/: LoadCLib.iOS.cpp  LoadCLib.iOS.vcxproj
RunJLib/: CMakeLists.txt
RunJLib/Lib1/: CMakeLists.txt  Main.cpp
SeparateCLib/: README.txt  SeparateCLib.sln
SeparateCLib/SeparateCLib/SeparateCLib.Android/: SeparateCLib.Android.vcxproj
SeparateCLib/SeparateCLib/SeparateCLib.Shared/: SeparateCLib.Shared.vcxitems
SeparateCLib/SeparateCLib/SeparateCLib.iOS/: SeparateCLib.iOS.cpp  SeparateCLib.iOS.vcxproj
TestJLib/: Catch.h
TestJLib/Lib1/: CMakeLists.txt  testLib1.cpp
TestLoadCLibApp/: .gitignore  TestLoadCLibApp.sln  TestLoadCLibApp.userprefs
TestLoadCLibApp/TestLoadCLibApp/TestLoadCLibApp.Droid/: MainActivity.cs  TestLoadCLibApp.Droid.csproj
TestLoadCLibApp/TestLoadCLibApp/TestLoadCLibApp.Droid/Properties/: AssemblyInfo.cs
TestLoadCLibApp/TestLoadCLibApp/TestLoadCLibApp.Droid/Resources/: Resource.designer.cs
TestLoadCLibApp/TestLoadCLibApp/TestLoadCLibApp.Droid/Resources/values/: Strings.xml
TestLoadCLibApp/TestLoadCLibApp/TestLoadCLibApp.iOS/: AppDelegate.cs  Info.plist  Main.cs  TestLoadCLibApp.iOS.csproj  ViewController.cs  ViewController.designer.cs  Wrapper.cs
include/: Include1.h
